fix css on mobile for articles on front page

--- a/server/public/main.css
+++ b/server/public/main.css
@@ -136,6 +136,11 @@ article img {
   width: 100%;
 }
 
+.homeFood {
+  flex-direction: column;
+  justify-content: center;
+}
+
 img.header {
   margin: 5vh 0;
   max-height: 60vh;
@@ -192,6 +197,7 @@ span {
 }
 
 span>h3,span>h1,span>p,span>h2 {
+  padding-left: 1em;
   padding-right: 1em;
   margin: 0;
 }
@@ -205,8 +211,9 @@ span>h3:nth-child(2), p.detaillarge, label {
 }
 
 @media (min-width: 700px) {
-  body {
-    font-size: 20px;
+
+  body, a {
+    font-size: 24px;
   }
   header>h3 {
     padding: 5vh;
@@ -214,7 +221,7 @@ span>h3:nth-child(2), p.detaillarge, label {
 }
 
 @media (min-width: 1130px) {
-  body {
+  body,a {
     font-size: 18px;
   }
   h3 {
@@ -248,7 +255,7 @@ footer a {
 
 .menu {
   position: absolute;
-  width: 100vw;
+  width: 90vw;
   display: flex;
   flex-direction: row;
   padding-left: 5vw;
